# rcp2-cli

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  demo.tape  deny.toml
.github/workflows/: ci.yml  zizmor.yml
crates/rcp2-cli/: Cargo.toml
crates/rcp2-cli/src/: main.rs
crates/rcp2-cli/src/commands/: clean_pads_cmd.rs  connect_cmd.rs  dump_cmd.rs  fader_cmd.rs  interactive.rs  mod.rs  monitor_cmd.rs  pad_cmd.rs  record_cmd.rs  send_cmd.rs  set_property_cmd.rs  transfer_cmd.rs
crates/rcp2-core/: Cargo.toml
crates/rcp2-core/src/: form.rs  lib.rs  pad.rs  recording.rs  settings.rs  settings_labels.rs
crates/rcp2-core/src/ops/: audio.rs  download.rs  fader.rs  gui.rs  mod.rs  move_pad.rs  network.rs  pad.rs  recorder.rs  system.rs  transfer.rs  upload.rs
crates/rcp2-protocol/: Cargo.toml
crates/rcp2-protocol/src/: error.rs  lib.rs
crates/rcp2-protocol/src/device/: connection.rs  mod.rs  model.rs  state.rs
crates/rcp2-protocol/src/framing/: mod.rs
crates/rcp2-protocol/src/packet/: child_added.rs  child_removed.rs  device_report.rs  handshake.rs  mod.rs  property_update.rs
crates/rcp2-protocol/src/transport/: hid.rs  mock.rs  mod.rs
crates/rcp2-protocol/src/types/: c_string.rs  mod.rs  structured.rs  value.rs
crates/rcp2-tui/: Cargo.toml
crates/rcp2-tui/src/: detail_form.rs  lib.rs  transfer.rs
crates/rcp2-tui/src/app/: mod.rs  pad_ops.rs  transfer_ops.rs
crates/rcp2-tui/src/ui/: form.rs  header.rs  help.rs  mod.rs  monitor.rs  pads.rs  settings.rs  settings_labels.rs  strip.rs  (+2 more)
udev/: 50-rodecaster-duo.rules  50-rodecaster.rules
