[workspace]
members = [
    "crates/rcp2-protocol",
    "crates/rcp2-core",
    "crates/rcp2-cli",
    "crates/rcp2-tui",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
nom = "8"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
ratatui = "0.30"
crossterm = "0.29"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
