[package]
name = "rcp2-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "rcp2-cli"
path = "src/main.rs"

[dependencies]
rcp2-protocol = { path = "../rcp2-protocol", version = "0.1.0" }
rcp2-tui = { path = "../rcp2-tui", version = "0.1.0" }
hidapi = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
